多人聊天房间基本实现,未进行重复判断

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,6 @@
 <body>
 <div>欢迎来到主页</div>
 <div><a href="/single">单人游戏</a></div>
-<div><a href="">多人游戏</a></div>
+<div><a href="/many">多人游戏</a></div>
 </body>
 </html>
