多人游戏房间用户名重复判断实现,更新bug

--- a/src/main/resources/templates/many.html
+++ b/src/main/resources/templates/many.html
@@ -167,6 +167,11 @@
 
         //离开聊天室
         $('#btn_exit').click(function () {
+            var ajax={
+                'username':username,
+                'room':room
+            };
+
             $.ajax({
                 url:'/exit.ajax',
                 type:'post',
