--- a/src/main/resources/templates/many.html
+++ b/src/main/resources/templates/many.html
@@ -8,28 +8,42 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-<div id="text_chat" style="display: none">
-    <div>当前房间:<span id="room_name"></span></div>
-    <div>当前用户:<span id="user_name"></span></div>
-    <textarea id="text_chat_content" readonly="readonly" cols="50" rows="15" onfocus="this.scrollTop = this.scrollHeight" >
+<div class="col-md-8">
+    <div id="text_chat" style="display: none">
+        <div>当前房间:<span id="room_name"></span></div>
+        <div>当前用户:<span id="user_name"></span></div>
+        <textarea id="text_chat_content" readonly="readonly" cols="50" rows="15" onfocus="this.scrollTop = this.scrollHeight" >
     </textarea>
-    <div>输入框:<input id="in_message" value=""/><button id="btn_send">发送</button></div>
-    <div><button id="begin" style="display: none">开始游戏</button></div>
-</div>
-<div id="enter">
-    <div id="room">房间名:<input id="in_room" value=""/></div>
-    <div id="user">用户:<input id="in_username" value=""/></div>
-    <div>
-        <button id="btn_create">创建房间</button>
-        <button id="btn_join">加入房间</button>
+        <div>输入框:<input id="in_message" value=""/><button id="btn_send">发送</button></div>
+        <div><button id="begin" style="display: none">开始游戏</button></div>
     </div>
+    <div id="enter">
+        <div id="room">房间名:<input id="in_room" value=""/></div>
+        <div id="user">用户:<input id="in_username" value=""/></div>
+        <div>
+            <button id="btn_create">创建房间</button>
+            <button id="btn_join">加入房间</button>
+        </div>
+    </div>
+    <button id="btn_exit" style="display: none">离开房间</button>
 </div>
-<button id="btn_exit" style="display: none">离开房间</button>
+<div class="col-md-4">
+    <table border="1">
+        <thead>
+            <tr>
+                <th>用户名</th>
+                <th>本轮得分(s)</th>
+            </tr>
+        </thead>
+        <tbody id="userForm">
+        </tbody>
+    </table>
+</div>
 
 <script type="text/javascript">
     $(document).ready(function () {
 
-        var urlPrefix='ws://localhost:8088/many';
+        var urlPrefix='ws://localhost:8080/many';
         var ws=null;
         var room;
         var username;
@@ -97,6 +111,9 @@
                 //实现滑动条自动下滑
                 var height=$("#text_chat_content")[0].scrollHeight;
                 $("#text_chat_content")[0].scrollTop=height;
+                if (obj.mode == 1) {
+                    var users=obj.users;
+                }
             };
 
             ws.onclose=function (event) {
@@ -159,7 +176,14 @@
 
             ws.onmessage=function (event) { //监听消息
                 //服务端发送的消息
-                $('#text_chat_content').append(event.data.message+'\n');
+                var obj = JSON.parse(event.data);
+                $('#text_chat_content').append(obj.message+'\n');
+                //实现滑动条自动下滑
+                var height=$("#text_chat_content")[0].scrollHeight;
+                $("#text_chat_content")[0].scrollTop=height;
+                if (obj.mode == 1) {
+                    var users=obj.users;
+                }
             };
 
             ws.onclose=function (event) {
