--- a/src/main/resources/templates/many.html
+++ b/src/main/resources/templates/many.html
@@ -26,6 +26,11 @@
         </div>
     </div>
     <button id="btn_exit" style="display: none">离开房间</button>
+    
+    <div id = "fire_div" style="display: none">输入框:
+        <input id="fire_name" value=""/>
+        <button id="btn_fire">踢出</button>
+    </div>
 </div>
 <div class="col-md-4">
     <div class="Form" style="display: none">当前房间</div>
@@ -34,6 +39,9 @@
             <tr>
                 <th>用户名</th>
                 <th>本轮所用时间(秒)</th>
+                
+                    
+                
             </tr>
         </thead>
         <tbody id="userForm">
@@ -97,8 +105,9 @@
             $('#begin').show();
 
             $('#room_name').text(room);
-            $('#user_name').text(username);
-
+            $('#fire_div').show();
+            // <button id="btn_fire">踢出</button>
+            
             var url=urlPrefix+'/'+room+'/'+username;
             ws=new WebSocket(url);
 
@@ -133,11 +142,75 @@
                 }else if (obj.mode == 3) {
                     $('#text_chat_content').append(obj.message+'\n');
                     $('.score').text("");
+                }else if (obj.mode == 4) {
+                    console.log(obj)
+                    if(obj.message==username){
+
+                        ws.close()
+                        $('#enter').show();
+                        $('#text_chat').hide();
+                        $('#btn_exit').hide();
+                        $('#text_chat_content').text("");
+                        $('.Form').hide();
+                        alert("你被踢出房间")
+                    }
+                    
+                    // $('#text_chat_content').append(obj.message+'\n');
+                    // $('.score').text("");
                 }
             };
 
             ws.onclose=function (event) {
             };
+        });
+        //踢人
+        $('#btn_fire').click(function () {
+            var firename =$('#fire_name').val()
+            // var url=urlPrefix+'/'+room+'/'+firename;
+            
+            // ws2=new WebSocket(url);
+            var ajax={
+                'username':firename,
+                'room':room
+            };
+
+            $.ajax({
+                url:'/fire.ajax',
+                type:'post',
+                async:false,
+                contentType: 'application/json; charset=utf-8',
+                dataType: 'json',
+                data:JSON.stringify(ajax),
+                success:function (data) {
+                    if (data.result == "success"  ) {
+                        console.log(firename);
+                        console.log("-------")
+                        console.log(ajax)
+                        ws.send(JSON.stringify({
+                                message:ajax.username,
+                                mode:4
+                            }));
+                        // ws2.close();
+                        if (data.message)
+                        console.log("fuck");
+                        // ws.send(JSON.stringify({
+                        //         message:'[系统]:用户-'+username+'回答正确,用时'+data.useTime+'秒',
+                        //         mode:2,
+                        //         useTime:data.useTime
+                        //     }))
+                            
+                    }
+                }
+            });
+
+            // $('#enter').show();
+            // $('#text_chat').hide();
+            // $('#btn_exit').hide();
+            // $('#text_chat_content').text("");
+
+            // if (ws){
+            //     ws.close();
+            // }
         });
 
         //加入房间点击事件
@@ -205,6 +278,7 @@
                 } else if (obj.mode == 1) {
                     $('#text_chat_content').append(obj.message+'\n');
                     var users=obj.users;
+                    console.log(obj);
                     var temp="";
                     $.each(users,function (index, value) {
                         if ($('#score_' + value).text() == "")
@@ -222,6 +296,19 @@
                 }else if (obj.mode == 3) {
                     $('#text_chat_content').append(obj.message+'\n');
                     $('.score').text("");
+                }else if (obj.mode == 4) {
+                    console.log(obj)
+                    if(obj.message==username){
+                        ws.close()
+                        $('#enter').show();
+                        $('#text_chat').hide();
+                        $('#btn_exit').hide();
+                        $('#text_chat_content').text("");
+                        $('.Form').hide();
+                        alert("你被踢出房间")
+                    }
+                    $('#text_chat_content').append(obj.message+'\n');
+                    // $('.score').text("");
                 }
             };
 
