--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,6 @@
 <div>欢迎来到主页</div>
 <div><a href="/single_choice">单人游戏</a></div>
 <div><a href="/many">多人游戏</a></div>
-<div><a href="/member/userAddGameContent">创建问题</a></div>
+<div><a href="/userAddGameContent">创建问题</a></div>
 </body>
 </html>
