实现图片添加，路径存于数据库，单人游戏显示待实现

--- a/src/main/resources/templates/userAddGameContent.html
+++ b/src/main/resources/templates/userAddGameContent.html
@@ -6,16 +6,19 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 </head>
 <body>
-<!--隐藏表单存储后台数据-->
-<input type="hidden" th:value="${photosPath}" id="photo_path">
 <div>
     <div>添加答案：<input id="add_question" value=""></div>
     <div>添加提示：<input id="add_describe" value=""></div>
-    <input type="button"onclick="javascrtpt:window.location.href='/uploadPhotoIndex'" value="上传照片">
+    <div class="file-box">
+        <label class="change-photo-btn">
+            <input type="file" value="" name="file" id = "input_file"
+                   accept="image/gif,image/jpeg,image/jpg,image/png,image/svg" onchange="imgPreview(this,0)" >
+        </label>
+    </div>
     <p></p>
     <div>
-        <button id="add_title">添加提示</button>
-        <button id="remove_title">移除最新提示</button>
+        <button id="add_title">添加</button>
+        <button id="remove_title">移除上一次</button>
         <table id="table_show">
             <thead>
                 <tr>
@@ -31,13 +34,9 @@
 <div id="question"><button id="add_result">确定添加题目</button></div>
 
 <script type="text/javascript">
-//    var path = $('#photo_path').val();
-//    if(path != "test") {
-//
-//    }
     $('#question').hide();
-    var index = 1;
     var array = [];
+    var index = 1;
     $('#add_title').click(function () {
         var value = $('#add_describe').val();
         if(value == "") {
@@ -91,6 +90,55 @@
         });
         $('#add_result').hide();
     });
+
+    function imgPreview(fileDom,i) {
+        //判断是否支持FileReader
+        if(window.FileReader) {
+            var reader = new FileReader();
+        } else {
+            alert("您的设备不支持图片预览功能，如需该功能请升级您的设备！");
+        }
+        //获取文件
+        var file = fileDom.files[0];
+        var imageType = /^image\//;
+        //是否是图片
+        if(!imageType.test(file.type)) {
+            alert("请选择图片！");
+            return;
+        }
+        //读取完成
+        reader.onload = function(e) {
+            //图片路径设置为读取的图片
+            // img.src = e.target.result;
+            console.log(document.getElementsByClassName('file-box'));
+            $("#table_show tbody").append('<tr><td>' + index + '</td><td><img src='+e.target.result+'></td></tr>');
+            index ++;
+            console.log('reader',reader)
+        };
+        reader.readAsDataURL(file);
+
+        var formData = new FormData();
+        formData.append('photo', $('#input_file')[0].files[0]);
+        //ajax请求
+        $.ajax({
+            type: "post",
+            url:  "/insertPhoto.ajax",
+            data: formData,
+            dataType: 'json',
+            processData: false, // 告诉jQuery不要去处理发送的数据
+            contentType: false, // 告诉jQuery不要去设置Content-Type请求头
+            xhrFields:{withCredentials:true},
+            async: true,    //默认是true：异步，false：同步。
+            success: function (data) {
+                alert("添加成功");
+                var photoPath = 'D:\\insertPhoto\\' + $('#input_file')[0].files[0].name;
+                array.push(photoPath);
+            },
+            error: function (data) {
+                alert("添加失败");
+            }
+        });
+    }
 </script>
 
 </body>
