实现图片添加，重命名存储，路径存于数据库，待实现前端读取路径展示

--- a/src/main/resources/templates/single.html
+++ b/src/main/resources/templates/single.html
@@ -23,7 +23,7 @@
         <tbody th:each="describe:${describes}">
             <tr th:id="'td_'+${describeStat.count}" style="display: none">
                 <td th:text="${describeStat.count}" >1</td>
-                <td th:text="${describe.getToken()}">水果</td>
+                <td th:text="${describe.getToken()}"></td>
             </tr>
         </tbody>
     </table>
